add pushAppleFCM con gestione nel progetto add pushsharp referenziato come lib in quanto è stato modificato per aggiungere un payload compatibile con apple

--- a/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
+++ b/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
@@ -75,33 +75,21 @@
       <HintPath>..\..\..\..\Orchard\src\packages\NHibernate.4.0.1.4000\lib\net40\NHibernate.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="PushSharp.Amazon, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Amazon.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="PushSharp.Apple, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Apple.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PushSharp.Blackberry, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Blackberry.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\PushSharp.Apple.dll</HintPath>
     </Reference>
     <Reference Include="PushSharp.Core, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PushSharp.Firefox, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Firefox.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\PushSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="PushSharp.Google, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Google.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\PushSharp.Google.dll</HintPath>
     </Reference>
     <Reference Include="PushSharp.Windows, Version=4.0.10.0, Culture=neutral, PublicKeyToken=cf74b75eab2c0170, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Orchard\src\packages\PushSharp.4.0.10\lib\net45\PushSharp.Windows.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\PushSharp.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
