- adds workflow activity and form with some mailchimp url/payload Template - adds a site settings to store a default audience and adds a token to read it - adds a token in order to generate a subscriber hash starting from a text for example from the UserEmail {Content.UserEmail.ToMailchimpSubscriberHash} - moves Md5Hash to ApiService to Service in order to be used elsewhere id needed

--- a/src/Modules/Laser.Orchard.CommunicationGateway/Laser.Orchard.CommunicationGateway.csproj
+++ b/src/Modules/Laser.Orchard.CommunicationGateway/Laser.Orchard.CommunicationGateway.csproj
@@ -149,6 +149,7 @@
     <Compile Include="CRM\Mailchimp\Services\IMailchimpService.cs" />
     <Compile Include="CRM\Mailchimp\Services\MailchimpApiService.cs" />
     <Compile Include="CRM\Mailchimp\SettingsHooks\MailchimpSubscriptionPartSettingsHooks.cs" />
+    <Compile Include="CRM\Mailchimp\Tokens\MailchimpTokens.cs" />
     <Compile Include="CRM\Mailchimp\ViewModels\APICallEdit.cs" />
     <Compile Include="CRM\Mailchimp\ViewModels\MailchimpSiteSettingsEdit.cs" />
     <Compile Include="CRM\Mailchimp\ViewModels\RequestTypeInfo.cs" />
