--- a/src/Modules/Laser.Orchard.Mobile/packages.config
+++ b/src/Modules/Laser.Orchard.Mobile/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
@@ -12,4 +12,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json.Schema" version="1.0.11" targetFramework="net452" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
