--- a/src/Modules/Laser.Orchard.Facebook/packages.config
+++ b/src/Modules/Laser.Orchard.Facebook/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="Facebook" version="7.0.6" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -11,4 +11,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
