--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
-  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="BuildWebCompiler" version="1.12.394" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
@@ -19,4 +19,5 @@
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
   <package id="RazorEngine" version="3.9.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
