--- a/src/Modules/Laser.Orchard.GoogleAnalytics/Laser.Orchard.GoogleAnalytics.csproj
+++ b/src/Modules/Laser.Orchard.GoogleAnalytics/Laser.Orchard.GoogleAnalytics.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CookieGDPR.cs" />
     <Compile Include="Services\MissingSettingsBanner.cs" />
+    <Compile Include="ViewModels\GASettingsVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Module.txt" />
