--- a/src/Modules/Laser.Orchard.Braintree/Laser.Orchard.Braintree.csproj
+++ b/src/Modules/Laser.Orchard.Braintree/Laser.Orchard.Braintree.csproj
@@ -118,6 +118,7 @@
     <Content Include="Module.txt" />
     <Content Include="Views\Braintree\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\BraintreeDropin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
