--- a/src/Modules/Laser.Orchard.Facebook/packages.config
+++ b/src/Modules/Laser.Orchard.Facebook/packages.config
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="7.0.1" targetFramework="net48" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="Facebook" version="7.0.6" targetFramework="net48" />
   <package id="jQuery" version="1.10.2" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net48" />
