--- a/src/Modules/Laser.Orchard.ShareLink/packages.config
+++ b/src/Modules/Laser.Orchard.ShareLink/packages.config
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="7.0.1" targetFramework="net48" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net48" />
