--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net48" />
-  <package id="AutoMapper" version="7.0.1" targetFramework="net48" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="BuildWebCompiler" version="1.12.394" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net48" />
   <package id="jQuery" version="1.10.2" targetFramework="net48" />
