--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -13,10 +13,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RazorEngine" version="3.9.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
