--- a/src/Modules/Laser.Orchard.WebServices/Laser.Orchard.WebServices.csproj
+++ b/src/Modules/Laser.Orchard.WebServices/Laser.Orchard.WebServices.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -123,6 +124,7 @@
     <Content Include="Module.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CustomRESTApiController.cs" />
     <Compile Include="Controllers\SignalApiController.cs" />
     <Compile Include="Controllers\GiroParchiController.cs" />
     <Compile Include="Controllers\JsonController.cs" />
@@ -134,6 +136,7 @@
     <Compile Include="Drivers\WebServiceSettingsPartDriver.cs" />
     <Compile Include="Handlers\WebServiceSettingsHandler.cs" />
     <Compile Include="Models\WebServiceSettingsPart.cs" />
+    <Compile Include="Routes\CustomRESTApiRoutes.cs" />
     <Compile Include="Routes\Routes.cs" />
     <Compile Include="Services\IWebApiService.cs" />
     <Compile Include="ViewModels\Eventi015VM.cs" />
