caching of settings for braintree. This required a change in the adminController constructors for all payment gateways, to enable proper eviction of cached settings. This also sets things up for other payment methods to have their settings cached as well.

--- a/src/Modules/Laser.Orchard.Braintree/Laser.Orchard.Braintree.csproj
+++ b/src/Modules/Laser.Orchard.Braintree/Laser.Orchard.Braintree.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Routes.cs" />
     <Compile Include="Services\BraintreePosService.cs" />
     <Compile Include="Services\DefaultBraintreeService.cs" />
+    <Compile Include="Services\IBraintreePosService.cs" />
     <Compile Include="Services\IBraintreeService.cs" />
     <Compile Include="Services\MissingSettingsBanner.cs" />
     <Compile Include="Services\PaymentContext.cs" />
