--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -81,6 +81,9 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\Orchard\src\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json.Schema, Version=3.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\Orchard\src\packages\Newtonsoft.Json.Schema.3.0.13\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\Orchard\src\packages\NHibernate.4.0.1.4000\lib\net40\NHibernate.dll</HintPath>
       <Private>True</Private>
@@ -142,6 +145,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\MerchantDomainAssociationAdmin\Index.cshtml" />
     <None Include="Assets\laser-base.scss" />
     <Content Include="Recipes\TinyMCEToolbarExtension.recipe.xml" />
     <Content Include="Scripts\laser-tinymce.js" />
@@ -394,6 +398,15 @@
     <Compile Include="Activities\TaxonomySetValuesActivity.cs" />
     <Compile Include="Activities\TaxonomySetValuesForm.cs" />
     <Compile Include="Activities\UserEventActivity.cs" />
+    <Compile Include="AppleEnvironment\Controllers\MerchantDomainAssociationAdminController.cs" />
+    <Compile Include="AppleEnvironment\Controllers\MerchantDomainAssociationController.cs" />
+    <Compile Include="AppleEnvironment\Migrations\MerchantDomainAssociationMigration.cs" />
+    <Compile Include="AppleEnvironment\Models\MerchantDomainAssociationRecord.cs" />
+    <Compile Include="AppleEnvironment\Navigation\MerchantDomainAssociationNavigation.cs" />
+    <Compile Include="AppleEnvironment\Permissions\MerchantDomainAssociationPermissions.cs" />
+    <Compile Include="AppleEnvironment\Routes\Routes.cs" />
+    <Compile Include="AppleEnvironment\Services\MerchantDomainAssociationService.cs" />
+    <Compile Include="AppleEnvironment\ViewModels\MerchantDomainAssociationViewModel.cs" />
     <Compile Include="ColorPicker\ColorPickerField.cs" />
     <Compile Include="ColorPicker\ColorPickerFieldDriver.cs" />
     <Compile Include="ColorPicker\ColorPickerFieldEditorEvents.cs" />
