--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net48" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net48" />
